exports[`no-invalid-url-protocol-comparison > invalid(1): const url = new URL('https://example.com'); url.protocol == \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol == "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(1): const url = new URL('https://example.com'); url.protocol == \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol == "https"
    |                                                             ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol == "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(1): declare const object: {url: URL}; object.url.protocol === \"https\" 1`] = `

Filename: file.ts

  1 | declare const object: {url: URL}; object.url.protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(1): declare const object: {url: URL}; object.url.protocol === \"https\" 2`] = `

Message:
> 1 | declare const object: {url: URL}; object.url.protocol === "https"
    |                                                           ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | declare const object: {url: URL}; object.url.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(10): const url = new URL('https://example.com'); url.protocol === \"ftp\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "ftp"

`;

exports[`no-invalid-url-protocol-comparison > invalid(10): const url = new URL('https://example.com'); url.protocol === \"ftp\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "ftp"
    |                                                              ^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`ftp:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "ftp:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(11): const url = new URL('https://example.com'); url.protocol === \"file\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "file"

`;

exports[`no-invalid-url-protocol-comparison > invalid(11): const url = new URL('https://example.com'); url.protocol === \"file\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "file"
    |                                                              ^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`file:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "file:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(12): const url = new URL('https://example.com'); url.protocol === \"ws\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "ws"

`;

exports[`no-invalid-url-protocol-comparison > invalid(12): const url = new URL('https://example.com'); url.protocol === \"ws\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "ws"
    |                                                              ^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`ws:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "ws:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(13): const url = new URL('https://example.com'); url.protocol === \"wss\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "wss"

`;

exports[`no-invalid-url-protocol-comparison > invalid(13): const url = new URL('https://example.com'); url.protocol === \"wss\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "wss"
    |                                                              ^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`wss:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "wss:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(14): const url = new URL('https://example.com'); url.protocol === \"mailto\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "mailto"

`;

exports[`no-invalid-url-protocol-comparison > invalid(14): const url = new URL('https://example.com'); url.protocol === \"mailto\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "mailto"
    |                                                              ^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`mailto:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "mailto:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(15): const url = new URL('https://example.com'); url.protocol === \"data\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "data"

`;

exports[`no-invalid-url-protocol-comparison > invalid(15): const url = new URL('https://example.com'); url.protocol === \"data\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "data"
    |                                                              ^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`data:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "data:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(16): const url = new URL('https://example.com'); url.protocol === \"blob\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "blob"

`;

exports[`no-invalid-url-protocol-comparison > invalid(16): const url = new URL('https://example.com'); url.protocol === \"blob\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "blob"
    |                                                              ^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`blob:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "blob:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(17): const url = new URL('https://example.com'); url.protocol === \"web+demo\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "web+demo"

`;

exports[`no-invalid-url-protocol-comparison > invalid(17): const url = new URL('https://example.com'); url.protocol === \"web+demo\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "web+demo"
    |                                                              ^^^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`web+demo:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "web+demo:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(18): const url = new URL('https://example.com'); url.protocol === \"x-v1.2\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "x-v1.2"

`;

exports[`no-invalid-url-protocol-comparison > invalid(18): const url = new URL('https://example.com'); url.protocol === \"x-v1.2\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "x-v1.2"
    |                                                              ^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`x-v1.2:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "x-v1.2:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(19): const url = new URL('https://example.com'); url.protocol === \"a\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "a"

`;

exports[`no-invalid-url-protocol-comparison > invalid(19): const url = new URL('https://example.com'); url.protocol === \"a\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "a"
    |                                                              ^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`a:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "a:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(2): const url = new URL('https://example.com'); \"HTTPS:\" == url.protocol 1`] = `

  1 | const url = new URL('https://example.com'); "HTTPS:" == url.protocol

`;

exports[`no-invalid-url-protocol-comparison > invalid(2): const url = new URL('https://example.com'); \"HTTPS:\" == url.protocol 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); "HTTPS:" == url.protocol
    |                                             ^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); "https:" == url.protocol

`;

exports[`no-invalid-url-protocol-comparison > invalid(2): declare function getUrl(): URL; getUrl().protocol === \"https\" 1`] = `

Filename: file.ts

  1 | declare function getUrl(): URL; getUrl().protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(2): declare function getUrl(): URL; getUrl().protocol === \"https\" 2`] = `

Message:
> 1 | declare function getUrl(): URL; getUrl().protocol === "https"
    |                                                       ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | declare function getUrl(): URL; getUrl().protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(20): const url = new URL('https://example.com'); url.protocol === \"HTTPS\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "HTTPS"

`;

exports[`no-invalid-url-protocol-comparison > invalid(20): const url = new URL('https://example.com'); url.protocol === \"HTTPS\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "HTTPS"
    |                                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(21): const url = new URL('https://example.com'); url.protocol === \"HtTp:\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "HtTp:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(21): const url = new URL('https://example.com'); url.protocol === \"HtTp:\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "HtTp:"
    |                                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`http:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "http:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(22): const url = new URL('https://example.com'); url[\"protocol\"] === \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url["protocol"] === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(22): const url = new URL('https://example.com'); url[\"protocol\"] === \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url["protocol"] === "https"
    |                                                                 ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url["protocol"] === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(23): const url = new URL('https://example.com'); url[\`protocol\`] === \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url[\`protocol\`] === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(23): const url = new URL('https://example.com'); url[\`protocol\`] === \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url[\`protocol\`] === "https"
    |                                                                 ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url[\`protocol\`] === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(24): const url = new URL('https://example.com'); (url).protocol === (\"https\") 1`] = `

  1 | const url = new URL('https://example.com'); (url).protocol === ("https")

`;

exports[`no-invalid-url-protocol-comparison > invalid(24): const url = new URL('https://example.com'); (url).protocol === (\"https\") 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); (url).protocol === ("https")
    |                                                                 ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); (url).protocol === ("https:")

`;

exports[`no-invalid-url-protocol-comparison > invalid(25): const url = new URL('https://example.com'); url?.protocol === \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url?.protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(25): const url = new URL('https://example.com'); url?.protocol === \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url?.protocol === "https"
    |                                                               ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url?.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(26): const url = new URL('https://example.com'); url?.[\"protocol\"] === \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url?.["protocol"] === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(26): const url = new URL('https://example.com'); url?.[\"protocol\"] === \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url?.["protocol"] === "https"
    |                                                                   ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url?.["protocol"] === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(27): const url = new URL('https://example.com'); !(url.protocol === \"https\") 1`] = `

  1 | const url = new URL('https://example.com'); !(url.protocol === "https")

`;

exports[`no-invalid-url-protocol-comparison > invalid(27): const url = new URL('https://example.com'); !(url.protocol === \"https\") 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); !(url.protocol === "https")
    |                                                                ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); !(url.protocol === "https:")

`;

exports[`no-invalid-url-protocol-comparison > invalid(28): const url = new URL('https://example.com'); url.protocol === \"http\" || url.protocol === \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "http" || url.protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(28): const url = new URL('https://example.com'); url.protocol === \"http\" || url.protocol === \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "http" || url.protocol === "https"
    |                                                              ^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`http:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "http:" || url.protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(28): const url = new URL('https://example.com'); url.protocol === \"http\" || url.protocol === \"https\" 3`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "http" || url.protocol === "https"
    |                                                                                         ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "http" || url.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(29): const url = new URL('https://example.com'); url.protocol === \`https\` 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === \`https\`

`;

exports[`no-invalid-url-protocol-comparison > invalid(29): const url = new URL('https://example.com'); url.protocol === \`https\` 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === \`https\`
    |                                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === \`https:\`

`;

exports[`no-invalid-url-protocol-comparison > invalid(3): const url = new URL('https://example.com'); url.protocol === \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(3): const url = new URL('https://example.com'); url.protocol === \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "https"
    |                                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(3): declare function getObject(): {url: URL}; [\"HTTPS:\"].includes(getObject().url.protocol) 1`] = `

Filename: file.ts

  1 | declare function getObject(): {url: URL}; ["HTTPS:"].includes(getObject().url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(3): declare function getObject(): {url: URL}; [\"HTTPS:\"].includes(getObject().url.protocol) 2`] = `

Message:
> 1 | declare function getObject(): {url: URL}; ["HTTPS:"].includes(getObject().url.protocol)
    |                                            ^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | declare function getObject(): {url: URL}; ["https:"].includes(getObject().url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(30): const url = new URL('https://example.com'); url.protocol === \"h\\u0074tps\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "h\\u0074tps"

`;

exports[`no-invalid-url-protocol-comparison > invalid(30): const url = new URL('https://example.com'); url.protocol === \"h\\u0074tps\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "h\\u0074tps"
    |                                                              ^^^^^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(31): const url = new URL('https://example.com'); url.protocol === \"\\x48TTPS:\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "\\x48TTPS:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(31): const url = new URL('https://example.com'); url.protocol === \"\\x48TTPS:\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "\\x48TTPS:"
    |                                                              ^^^^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(32): const url = new URL('https://example.com'); url.protocol /* keep */ === /* keep */ \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol /* keep */ === /* keep */ "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(32): const url = new URL('https://example.com'); url.protocol /* keep */ === /* keep */ \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol /* keep */ === /* keep */ "https"
    |                                                                                    ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol /* keep */ === /* keep */ "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(33): const url = new URL('https://example.com'); switch (url.protocol) {case \"http\": break; case \"HTTPS\": break; default: break;} 1`] = `

  1 | const url = new URL('https://example.com'); switch (url.protocol) {case "http": break; case "HTTPS": break; default: break;}

`;

exports[`no-invalid-url-protocol-comparison > invalid(33): const url = new URL('https://example.com'); switch (url.protocol) {case \"http\": break; case \"HTTPS\": break; default: break;} 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); switch (url.protocol) {case "http": break; case "HTTPS": break; default: break;}
    |                                                                         ^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`http:\`.

Output:
  1 | const url = new URL('https://example.com'); switch (url.protocol) {case "http:": break; case "HTTPS": break; default: break;}

`;

exports[`no-invalid-url-protocol-comparison > invalid(33): const url = new URL('https://example.com'); switch (url.protocol) {case \"http\": break; case \"HTTPS\": break; default: break;} 3`] = `

Message:
> 1 | const url = new URL('https://example.com'); switch (url.protocol) {case "http": break; case "HTTPS": break; default: break;}
    |                                                                                             ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); switch (url.protocol) {case "http": break; case "https:": break; default: break;}

`;

exports[`no-invalid-url-protocol-comparison > invalid(34): const url = new URL('https://example.com'); switch (url?.protocol) {case \`https\`: break;} 1`] = `

  1 | const url = new URL('https://example.com'); switch (url?.protocol) {case \`https\`: break;}

`;

exports[`no-invalid-url-protocol-comparison > invalid(34): const url = new URL('https://example.com'); switch (url?.protocol) {case \`https\`: break;} 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); switch (url?.protocol) {case \`https\`: break;}
    |                                                                          ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); switch (url?.protocol) {case \`https:\`: break;}

`;

exports[`no-invalid-url-protocol-comparison > invalid(35): const url = new URL('https://example.com'); switch (url[\"protocol\"]) {case /* keep */ \"https\": break;} 1`] = `

  1 | const url = new URL('https://example.com'); switch (url["protocol"]) {case /* keep */ "https": break;}

`;

exports[`no-invalid-url-protocol-comparison > invalid(35): const url = new URL('https://example.com'); switch (url[\"protocol\"]) {case /* keep */ \"https\": break;} 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); switch (url["protocol"]) {case /* keep */ "https": break;}
    |                                                                                       ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); switch (url["protocol"]) {case /* keep */ "https:": break;}

`;

exports[`no-invalid-url-protocol-comparison > invalid(36): const url = new URL('https://example.com'); [\"http\", \"https\"].includes(url.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); ["http", "https"].includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(36): const url = new URL('https://example.com'); [\"http\", \"https\"].includes(url.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["http", "https"].includes(url.protocol)
    |                                              ^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`http:\`.

Output:
  1 | const url = new URL('https://example.com'); ["http:", "https"].includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(36): const url = new URL('https://example.com'); [\"http\", \"https\"].includes(url.protocol) 3`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["http", "https"].includes(url.protocol)
    |                                                      ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); ["http", "https:"].includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(37): const url = new URL('https://example.com'); ![\"http\", \"HTTPS:\"].includes(url.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); !["http", "HTTPS:"].includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(37): const url = new URL('https://example.com'); ![\"http\", \"HTTPS:\"].includes(url.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); !["http", "HTTPS:"].includes(url.protocol)
    |                                               ^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`http:\`.

Output:
  1 | const url = new URL('https://example.com'); !["http:", "HTTPS:"].includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(37): const url = new URL('https://example.com'); ![\"http\", \"HTTPS:\"].includes(url.protocol) 3`] = `

Message:
> 1 | const url = new URL('https://example.com'); !["http", "HTTPS:"].includes(url.protocol)
    |                                                       ^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); !["http", "https:"].includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(38): const url = new URL('https://example.com'); [\"http:\", \"https\", value, ...values, , \"FTP\"].includes(url.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); ["http:", "https", value, ...values, , "FTP"].includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(38): const url = new URL('https://example.com'); [\"http:\", \"https\", value, ...values, , \"FTP\"].includes(url.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["http:", "https", value, ...values, , "FTP"].includes(url.protocol)
    |                                                       ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); ["http:", "https:", value, ...values, , "FTP"].includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(38): const url = new URL('https://example.com'); [\"http:\", \"https\", value, ...values, , \"FTP\"].includes(url.protocol) 3`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["http:", "https", value, ...values, , "FTP"].includes(url.protocol)
    |                                                                                    ^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`ftp:\`.

Output:
  1 | const url = new URL('https://example.com'); ["http:", "https", value, ...values, , "ftp:"].includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(39): const url = new URL('https://example.com'); [\"https\"].includes(url.protocol, start()) 1`] = `

  1 | const url = new URL('https://example.com'); ["https"].includes(url.protocol, start())

`;

exports[`no-invalid-url-protocol-comparison > invalid(39): const url = new URL('https://example.com'); [\"https\"].includes(url.protocol, start()) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["https"].includes(url.protocol, start())
    |                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); ["https:"].includes(url.protocol, start())

`;

exports[`no-invalid-url-protocol-comparison > invalid(4): const url = new URL('https://example.com'); \"HTTPS:\" === url.protocol 1`] = `

  1 | const url = new URL('https://example.com'); "HTTPS:" === url.protocol

`;

exports[`no-invalid-url-protocol-comparison > invalid(4): const url = new URL('https://example.com'); \"HTTPS:\" === url.protocol 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); "HTTPS:" === url.protocol
    |                                             ^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); "https:" === url.protocol

`;

exports[`no-invalid-url-protocol-comparison > invalid(40): const url = new URL('https://example.com'); [\"https\"].indexOf(url.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); ["https"].indexOf(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(40): const url = new URL('https://example.com'); [\"https\"].indexOf(url.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["https"].indexOf(url.protocol)
    |                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); ["https:"].indexOf(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(41): const url = new URL('https://example.com'); [\"https\"].indexOf(url.protocol, 1) !== -1 1`] = `

  1 | const url = new URL('https://example.com'); ["https"].indexOf(url.protocol, 1) !== -1

`;

exports[`no-invalid-url-protocol-comparison > invalid(41): const url = new URL('https://example.com'); [\"https\"].indexOf(url.protocol, 1) !== -1 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["https"].indexOf(url.protocol, 1) !== -1
    |                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); ["https:"].indexOf(url.protocol, 1) !== -1

`;

exports[`no-invalid-url-protocol-comparison > invalid(42): const url = new URL('https://example.com'); [\"https\"].lastIndexOf(url.protocol, -1) >= 0 1`] = `

  1 | const url = new URL('https://example.com'); ["https"].lastIndexOf(url.protocol, -1) >= 0

`;

exports[`no-invalid-url-protocol-comparison > invalid(42): const url = new URL('https://example.com'); [\"https\"].lastIndexOf(url.protocol, -1) >= 0 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["https"].lastIndexOf(url.protocol, -1) >= 0
    |                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); ["https:"].lastIndexOf(url.protocol, -1) >= 0

`;

exports[`no-invalid-url-protocol-comparison > invalid(43): const url = new URL('https://example.com'); [\"https\"].includes(url?.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); ["https"].includes(url?.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(43): const url = new URL('https://example.com'); [\"https\"].includes(url?.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["https"].includes(url?.protocol)
    |                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); ["https:"].includes(url?.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(44): const url = new URL('https://example.com'); [\"https\"]?.includes?.(url.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); ["https"]?.includes?.(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(44): const url = new URL('https://example.com'); [\"https\"]?.includes?.(url.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); ["https"]?.includes?.(url.protocol)
    |                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); ["https:"]?.includes?.(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(45): const url = new URL('https://example.com'); ([\"https\"]).includes(url.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); (["https"]).includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(45): const url = new URL('https://example.com'); ([\"https\"]).includes(url.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); (["https"]).includes(url.protocol)
    |                                               ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); (["https:"]).includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(46): const url = new URL('https://example.com'); new Set([\"http\", \"HTTPS:\"]).has(url.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); new Set(["http", "HTTPS:"]).has(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(46): const url = new URL('https://example.com'); new Set([\"http\", \"HTTPS:\"]).has(url.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); new Set(["http", "HTTPS:"]).has(url.protocol)
    |                                                      ^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`http:\`.

Output:
  1 | const url = new URL('https://example.com'); new Set(["http:", "HTTPS:"]).has(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(46): const url = new URL('https://example.com'); new Set([\"http\", \"HTTPS:\"]).has(url.protocol) 3`] = `

Message:
> 1 | const url = new URL('https://example.com'); new Set(["http", "HTTPS:"]).has(url.protocol)
    |                                                              ^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); new Set(["http", "https:"]).has(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(47): const url = new URL('https://example.com'); new Set([\"https\", value, ...values]).has(url.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); new Set(["https", value, ...values]).has(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(47): const url = new URL('https://example.com'); new Set([\"https\", value, ...values]).has(url.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); new Set(["https", value, ...values]).has(url.protocol)
    |                                                      ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); new Set(["https:", value, ...values]).has(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(48): const url = new URL('https://example.com'); new Set([/* keep */ \"https\"]).has(/* keep */ url.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); new Set([/* keep */ "https"]).has(/* keep */ url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(48): const url = new URL('https://example.com'); new Set([/* keep */ \"https\"]).has(/* keep */ url.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); new Set([/* keep */ "https"]).has(/* keep */ url.protocol)
    |                                                                 ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); new Set([/* keep */ "https:"]).has(/* keep */ url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(49): const url = new URL('https://example.com'); new Set([\"https\"])?.has?.(url?.protocol) 1`] = `

  1 | const url = new URL('https://example.com'); new Set(["https"])?.has?.(url?.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(49): const url = new URL('https://example.com'); new Set([\"https\"])?.has?.(url?.protocol) 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); new Set(["https"])?.has?.(url?.protocol)
    |                                                      ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); new Set(["https:"])?.has?.(url?.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(5): const url = new URL('https://example.com'); url.protocol != \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol != "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(5): const url = new URL('https://example.com'); url.protocol != \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol != "https"
    |                                                             ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol != "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(50): const url = new URL('https://example.com'); consume(url.protocol === \"https\") 1`] = `

  1 | const url = new URL('https://example.com'); consume(url.protocol === "https")

`;

exports[`no-invalid-url-protocol-comparison > invalid(50): const url = new URL('https://example.com'); consume(url.protocol === \"https\") 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); consume(url.protocol === "https")
    |                                                                      ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); consume(url.protocol === "https:")

`;

exports[`no-invalid-url-protocol-comparison > invalid(51): new URL(value).protocol === \"https\" 1`] = `

  1 | new URL(value).protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(51): new URL(value).protocol === \"https\" 2`] = `

Message:
> 1 | new URL(value).protocol === "https"
    |                             ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | new URL(value).protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(52): import {URL} from \"node:url\"; new URL(value).protocol === \"https\" 1`] = `

  1 | import {URL} from "node:url"; new URL(value).protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(52): import {URL} from \"node:url\"; new URL(value).protocol === \"https\" 2`] = `

Message:
> 1 | import {URL} from "node:url"; new URL(value).protocol === "https"
    |                                                           ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | import {URL} from "node:url"; new URL(value).protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(53): import {URL as NodeURL} from \"url\"; const url = new NodeURL(value); url.protocol === \"https\" 1`] = `

  1 | import {URL as NodeURL} from "url"; const url = new NodeURL(value); url.protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(53): import {URL as NodeURL} from \"url\"; const url = new NodeURL(value); url.protocol === \"https\" 2`] = `

Message:
> 1 | import {URL as NodeURL} from "url"; const url = new NodeURL(value); url.protocol === "https"
    |                                                                                      ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | import {URL as NodeURL} from "url"; const url = new NodeURL(value); url.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(54): const url = new URL(value); const alias = url; alias.protocol === \"https\" 1`] = `

  1 | const url = new URL(value); const alias = url; alias.protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(54): const url = new URL(value); const alias = url; alias.protocol === \"https\" 2`] = `

Message:
> 1 | const url = new URL(value); const alias = url; alias.protocol === "https"
    |                                                                   ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL(value); const alias = url; alias.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(55): (condition ? new URL(value) : new URL(other)).protocol === \"https\" 1`] = `

  1 | (condition ? new URL(value) : new URL(other)).protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(55): (condition ? new URL(value) : new URL(other)).protocol === \"https\" 2`] = `

Message:
> 1 | (condition ? new URL(value) : new URL(other)).protocol === "https"
    |                                                            ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | (condition ? new URL(value) : new URL(other)).protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(56): (sideEffect(), new URL(value)).protocol === \"https\" 1`] = `

  1 | (sideEffect(), new URL(value)).protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(56): (sideEffect(), new URL(value)).protocol === \"https\" 2`] = `

Message:
> 1 | (sideEffect(), new URL(value)).protocol === "https"
    |                                             ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | (sideEffect(), new URL(value)).protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(57): function example(url: URL) {return url.protocol === \"https\";} 1`] = `

  1 | function example(url: URL) {return url.protocol === "https";}

`;

exports[`no-invalid-url-protocol-comparison > invalid(57): function example(url: URL) {return url.protocol === \"https\";} 2`] = `

Message:
> 1 | function example(url: URL) {return url.protocol === "https";}
    |                                                     ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | function example(url: URL) {return url.protocol === "https:";}

`;

exports[`no-invalid-url-protocol-comparison > invalid(58): type Url = URL; function example(url: Url) {return url.protocol === \"https\";} 1`] = `

  1 | type Url = URL; function example(url: Url) {return url.protocol === "https";}

`;

exports[`no-invalid-url-protocol-comparison > invalid(58): type Url = URL; function example(url: Url) {return url.protocol === \"https\";} 2`] = `

Message:
> 1 | type Url = URL; function example(url: Url) {return url.protocol === "https";}
    |                                                                     ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | type Url = URL; function example(url: Url) {return url.protocol === "https:";}

`;

exports[`no-invalid-url-protocol-comparison > invalid(59): import type {URL as NodeURL} from \"node:url\"; function example(url: NodeURL) {return url.protocol === \"https\";} 1`] = `

  1 | import type {URL as NodeURL} from "node:url"; function example(url: NodeURL) {return url.protocol === "https";}

`;

exports[`no-invalid-url-protocol-comparison > invalid(59): import type {URL as NodeURL} from \"node:url\"; function example(url: NodeURL) {return url.protocol === \"https\";} 2`] = `

Message:
> 1 | import type {URL as NodeURL} from "node:url"; function example(url: NodeURL) {return url.protocol === "https";}
    |                                                                                                       ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | import type {URL as NodeURL} from "node:url"; function example(url: NodeURL) {return url.protocol === "https:";}

`;

exports[`no-invalid-url-protocol-comparison > invalid(6): const url = new URL('https://example.com'); \"HTTPS:\" != url.protocol 1`] = `

  1 | const url = new URL('https://example.com'); "HTTPS:" != url.protocol

`;

exports[`no-invalid-url-protocol-comparison > invalid(6): const url = new URL('https://example.com'); \"HTTPS:\" != url.protocol 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); "HTTPS:" != url.protocol
    |                                             ^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); "https:" != url.protocol

`;

exports[`no-invalid-url-protocol-comparison > invalid(60): declare const url: import(\"url\").URL; url.protocol === \"https\" 1`] = `

  1 | declare const url: import("url").URL; url.protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(60): declare const url: import(\"url\").URL; url.protocol === \"https\" 2`] = `

Message:
> 1 | declare const url: import("url").URL; url.protocol === "https"
    |                                                        ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | declare const url: import("url").URL; url.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(61): (value as URL).protocol === (\"HTTPS\" as const) 1`] = `

  1 | (value as URL).protocol === ("HTTPS" as const)

`;

exports[`no-invalid-url-protocol-comparison > invalid(61): (value as URL).protocol === (\"HTTPS\" as const) 2`] = `

Message:
> 1 | (value as URL).protocol === ("HTTPS" as const)
    |                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | (value as URL).protocol === ("https:" as const)

`;

exports[`no-invalid-url-protocol-comparison > invalid(62): (<URL>value).protocol === \"https\" 1`] = `

  1 | (<URL>value).protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(62): (<URL>value).protocol === \"https\" 2`] = `

Message:
> 1 | (<URL>value).protocol === "https"
    |                           ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | (<URL>value).protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(63): const url = new URL(value); url!.protocol === \"https\" 1`] = `

  1 | const url = new URL(value); url!.protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(63): const url = new URL(value); url!.protocol === \"https\" 2`] = `

Message:
> 1 | const url = new URL(value); url!.protocol === "https"
    |                                               ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL(value); url!.protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(64): const url = new URL(value); url[\"protocol\" as const] === \"https\" 1`] = `

  1 | const url = new URL(value); url["protocol" as const] === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(64): const url = new URL(value); url[\"protocol\" as const] === \"https\" 2`] = `

Message:
> 1 | const url = new URL(value); url["protocol" as const] === "https"
    |                                                          ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL(value); url["protocol" as const] === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(65): const url = new URL(value); url[\"protocol\" satisfies string] === \"https\" 1`] = `

  1 | const url = new URL(value); url["protocol" satisfies string] === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(65): const url = new URL(value); url[\"protocol\" satisfies string] === \"https\" 2`] = `

Message:
> 1 | const url = new URL(value); url["protocol" satisfies string] === "https"
    |                                                                  ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL(value); url["protocol" satisfies string] === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(66): const url = new URL(value); (url.protocol satisfies string) === \"https\" 1`] = `

  1 | const url = new URL(value); (url.protocol satisfies string) === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(66): const url = new URL(value); (url.protocol satisfies string) === \"https\" 2`] = `

Message:
> 1 | const url = new URL(value); (url.protocol satisfies string) === "https"
    |                                                                 ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL(value); (url.protocol satisfies string) === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(67): const url = new URL(value); (url satisfies URL).protocol === \"https\" 1`] = `

  1 | const url = new URL(value); (url satisfies URL).protocol === "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(67): const url = new URL(value); (url satisfies URL).protocol === \"https\" 2`] = `

Message:
> 1 | const url = new URL(value); (url satisfies URL).protocol === "https"
    |                                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL(value); (url satisfies URL).protocol === "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(68): const url = new URL(value); ([\"https\"] as const).includes(url.protocol) 1`] = `

  1 | const url = new URL(value); (["https"] as const).includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(68): const url = new URL(value); ([\"https\"] as const).includes(url.protocol) 2`] = `

Message:
> 1 | const url = new URL(value); (["https"] as const).includes(url.protocol)
    |                               ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL(value); (["https:"] as const).includes(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(69): const url = new URL(value); (new Set([\"https\"]) as Set<string>).has(url.protocol) 1`] = `

  1 | const url = new URL(value); (new Set(["https"]) as Set<string>).has(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(69): const url = new URL(value); (new Set([\"https\"]) as Set<string>).has(url.protocol) 2`] = `

Message:
> 1 | const url = new URL(value); (new Set(["https"]) as Set<string>).has(url.protocol)
    |                                       ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL(value); (new Set(["https:"]) as Set<string>).has(url.protocol)

`;

exports[`no-invalid-url-protocol-comparison > invalid(7): const url = new URL('https://example.com'); url.protocol !== \"https\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol !== "https"

`;

exports[`no-invalid-url-protocol-comparison > invalid(7): const url = new URL('https://example.com'); url.protocol !== \"https\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol !== "https"
    |                                                              ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol !== "https:"

`;

exports[`no-invalid-url-protocol-comparison > invalid(70): function example(url: URL) {switch (url.protocol) {case (\"HTTPS\" as const): break;}} 1`] = `

  1 | function example(url: URL) {switch (url.protocol) {case ("HTTPS" as const): break;}}

`;

exports[`no-invalid-url-protocol-comparison > invalid(70): function example(url: URL) {switch (url.protocol) {case (\"HTTPS\" as const): break;}} 2`] = `

Message:
> 1 | function example(url: URL) {switch (url.protocol) {case ("HTTPS" as const): break;}}
    |                                                          ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | function example(url: URL) {switch (url.protocol) {case ("https:" as const): break;}}

`;

exports[`no-invalid-url-protocol-comparison > invalid(71): const url = new URL('https://example.com'); <div>{url.protocol === \"https\"}</div> 1`] = `

  1 | const url = new URL('https://example.com'); <div>{url.protocol === "https"}</div>

`;

exports[`no-invalid-url-protocol-comparison > invalid(71): const url = new URL('https://example.com'); <div>{url.protocol === \"https\"}</div> 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); <div>{url.protocol === "https"}</div>
    |                                                                    ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); <div>{url.protocol === "https:"}</div>

`;

exports[`no-invalid-url-protocol-comparison > invalid(72): const url = new URL(value);\r\nif (url.protocol === \"https\") {\r\n  consume(url);\r\n} 1`] = `

  1 | const url = new URL(value);
  2 | if (url.protocol === "https") {
  3 |   consume(url);
  4 | }

`;

exports[`no-invalid-url-protocol-comparison > invalid(72): const url = new URL(value);\r\nif (url.protocol === \"https\") {\r\n  consume(url);\r\n} 2`] = `

Message:
  1 | const url = new URL(value);
> 2 | if (url.protocol === "https") {
    |                      ^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.
  3 |   consume(url);
  4 | }

Output:
  1 | const url = new URL(value);
  2 | if (url.protocol === "https:") {
  3 |   consume(url);
  4 | }

`;

exports[`no-invalid-url-protocol-comparison > invalid(8): const url = new URL('https://example.com'); \"HTTPS:\" !== url.protocol 1`] = `

  1 | const url = new URL('https://example.com'); "HTTPS:" !== url.protocol

`;

exports[`no-invalid-url-protocol-comparison > invalid(8): const url = new URL('https://example.com'); \"HTTPS:\" !== url.protocol 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); "HTTPS:" !== url.protocol
    |                                             ^^^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`https:\`.

Output:
  1 | const url = new URL('https://example.com'); "https:" !== url.protocol

`;

exports[`no-invalid-url-protocol-comparison > invalid(9): const url = new URL('https://example.com'); url.protocol === \"http\" 1`] = `

  1 | const url = new URL('https://example.com'); url.protocol === "http"

`;

exports[`no-invalid-url-protocol-comparison > invalid(9): const url = new URL('https://example.com'); url.protocol === \"http\" 2`] = `

Message:
> 1 | const url = new URL('https://example.com'); url.protocol === "http"
    |                                                              ^^^^^^ \`URL#protocol\` values are lowercase and end with \`:\`. Compare with \`http:\`.

Output:
  1 | const url = new URL('https://example.com'); url.protocol === "http:"

`;
